<resources>


    <string name="app_name">home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="snack">Перекус</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="progress_home">Прогресс</string>
    <string name="meal_settings">Настройка приема пищи</string>
    <string name="meal_product_name">Продукт</string>
    <string name="meal_product_serving_size">Размер порции</string>
    <string name="meal_product_ccal">Калории</string>
    <string name="product_protein_text">"Белки: "</string>
    <string name="product_carbohydrates_text">"Углеводы: "</string>
    <string name="product_fat_text">"Жиры: "</string>
    <string name="recipe_protein_text">"Белки: "</string>
    <string name="recipe_carbohydrates_text">"Углеводы: "</string>
    <string name="recipe_fat_text">"Жиры: "</string>
    <string name="default_product_portion">"Порция по умолчанию (гр): "</string>
    <string name="product_settings">Настройте параметры продукта (вес или Ккал)</string>
    <string name="minor_product_information">Подробная информация о продукте</string>
    <string name="product_calories_label">"Калории: "</string>
    <string name="product_serving_size_label">"Размер порции: "</string>
    <string name="product_protein_label">Белки (гр):</string>
    <string name="product_fat_label">Жиры (гр):</string>
    <string name="product_carbohydrates_label">Углеводы (гр):</string>
    <string name="product_dietary_fiber_label">Пищевые волокна (гр):</string>
    <string name="product_sugars_label">Сахара (гр):</string>
    <string name="product_starch_dextrins_label">Крахмал и декстрины (гр):</string>
    <string name="product_potassium_label">Калий (мкг):</string>
    <string name="product_calcium_label">Кальций (мг):</string>
    <string name="product_silicon_label">Кремний (мг):</string>
    <string name="product_magnesium_label">Магний (мг):</string>
    <string name="product_sodium_label">Натрий (мг):</string>
    <string name="product_sulfur_label">Сера (мг):</string>
    <string name="product_phosphorus_label">Фосфор (мг):</string>
    <string name="product_chlorine_label">Хлор (мг):</string>
    <string name="product_iron_label">Железо (мг):</string>
    <string name="product_zinc_label">Цинк (мг):</string>
    <string name="product_omega3_label">Омега3 (гр):</string>
    <string name="product_omega6_label">Омега6 (гр):</string>
    <string name="product_vitaminA_label">Витамин А (мкг):</string>
    <string name="product_vitaminB1_label">Витамин B1 (мг):</string>
    <string name="product_vitaminB2_label">Витамин B2 (мг):</string>
    <string name="product_vitaminB4_label">Витамин B4 (мг):</string>
    <string name="product_vitaminC_label">Витамин C (мг):</string>
    <string name="product_vitaminD_label">Витамин D (мкг):</string>
    <string name="recipes_page_text">Рецепты</string>
    <string name="recipes_healthy_breakfasts_text">Полезные завтраки</string>
    <string name="recipes_quick_dinners_text">Быстрые ужины</string>
    <string name="less_threeH_dishes_text"><![CDATA[Блюда <300 Ккал]]></string>
    <string name="vegan_menu_text">Веган меню</string>
    <string name="cooking_time_text">Время приготовления:</string>
    <string name="under_15_minutes">До 15 мин</string>
    <string name="upper_60_minutes">Любое</string>
    <string name="under_30_minutes">До 30 мин</string>
    <string name="under_60_minutes">До 60 мин</string>
    <string name="difficulty_text">Уровень сложности приготовления:</string>
    <string name="any_difficulty_level">Любой</string>
    <string name="only_vegan_products_text">Искать только веганские продукты?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="calories_on_hundred_grams_text">Максимальное количество калорий на 100гр:</string>
    <string name="add_own_recipe_text">Добавить собственный рецепт</string>
    <string name="recipeStepsText">Описание рецепта:</string>
    <string name="recipeIngredientText">Ингредиенты:</string>
    <string name="retry_ger_recipe_information">Произошла ошибка при загрузке рецепта, повторите попытку</string>
    <string name="recipeServingSize">Калорийность на 100 гр.:</string>
</resources>