<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            style="@style/Widget.Material3.CircularProgressIndicator.ExtraSmall"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:visibility="visible"
            app:trackColor="?attr/colorSecondary"
            app:indicatorColor="?attr/android:textColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:indicatorSize="48dp"
            app:indicatorInset="8dp" />

        <!-- Контейнер для ошибки (по умолчанию скрыт) -->
        <LinearLayout
            android:id="@+id/errorContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:text="@string/retry_ger_recipe_information"
                android:fontFamily="@font/exo_regular"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_24"
                app:autoSizeTextType="uniform"
                android:gravity="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/errorRetryButton"
                style="@style/LightPurpleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Повторить"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Верхняя панель с изображением и названием продукта -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/recipeAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="gone"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/recipeCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/dark_main_background_elements"
            app:expandedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Название рецепта"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            >

            <!-- Изображение продукта -->
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/default_product"
                app:layout_collapseMode="parallax" />

            <!-- Нижнее наложение -->
            <View
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim_bottom" />

            <!-- Toolbar с названием продукта -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:clickable="true"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/dark_main_background_elements"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/arrow_back_product"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Основное содержимое страницы -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/recipeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nutrientsData"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/portion_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/exo_regular"
                android:text="@string/default_product_portion"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productProteinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/exo_regular"
                android:text="@string/product_protein_text"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@id/portion_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productProteinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null"
                android:fontFamily="@font/exo_bold"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toEndOf="@id/productProteinTextView"
                app:layout_constraintTop_toTopOf="@id/productProteinTextView" />

            <!-- Текст и значение для Жиров -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productFatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_fat_text"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/exo_regular"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toEndOf="@id/productProteinValue"
                app:layout_constraintEnd_toStartOf="@+id/productFatValue"
                app:layout_constraintTop_toBottomOf="@+id/portion_size"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productFatValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null"
                android:fontFamily="@font/exo_bold"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toEndOf="@id/productFatTextView"
                app:layout_constraintTop_toTopOf="@id/productProteinTextView"
                app:layout_constraintEnd_toStartOf="@+id/productCarbohydratesTextView"/>

            <!-- Текст и значение для Углеводов -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productCarbohydratesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_carbohydrates_text"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/exo_regular"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@id/productCarbohydratesValue"
                app:layout_constraintTop_toBottomOf="@+id/portion_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productCarbohydratesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null"
                android:fontFamily="@font/exo_bold"
                android:layout_marginEnd="10dp"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintTop_toTopOf="@id/productProteinTextView" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/mainProductInformationDivider"
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/productProteinTextView"
                app:dividerColor="?attr/colorPrimary"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/changeProductDataText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/exo_regular"
                android:gravity="center_vertical"
                android:text="@string/product_settings"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/mainProductInformationDivider"
                app:layout_constraintBottom_toTopOf="@+id/servingSizeEditTextLayout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/servingSizeEditTextLayout"
                style="@style/OutlinedTextFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10sp"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintEnd_toStartOf="@id/caloriesEditTextLayout"
                app:layout_constraintTop_toBottomOf="@id/changeProductDataText"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Вес (гр)"
                    android:fontFamily="@font/exo_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/caloriesEditTextLayout"
                style="@style/OutlinedTextFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/servingSizeEditTextLayout"
                app:layout_constraintTop_toBottomOf="@id/changeProductDataText"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Калорийность"
                    android:fontFamily="@font/exo_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/settingRecipeProductInformationDivider"
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/servingSizeEditTextLayout"
                app:dividerColor="?attr/colorPrimary"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ingredientsTopText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/exo_regular"
                android:gravity="center_vertical"
                android:text="@string/recipeIngredientText"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/settingRecipeProductInformationDivider"
                />

            <!-- RecyclerView для шагов -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsTopText"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/ingredientsInformationDivider"
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/ingredientsRecyclerView"
                app:dividerColor="?attr/colorPrimary"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipeTopText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/exo_regular"
                android:gravity="center_vertical"
                android:text="@string/recipeStepsText"
                android:textColor="?attr/android:textColor"
                app:autoSizePresetSizes="@array/autosize_text_sizes_16"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsInformationDivider"
                />

            <!-- RecyclerView для шагов -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stepsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/recipeTopText"
                android:nestedScrollingEnabled="false" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_recipe_to_meal_button"
        style="@style/DarkPurpleButton"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom|center_horizontal"
        android:clickable="true"
        android:text="Добавить в рацион"
        android:textSize="@dimen/top_strings_size_16"
        android:textColor="@color/white"
        android:fontFamily="@font/exo_regular"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
